--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
         <title>
             This is my first title. Hope to really push all the way with this idea
@@ -7,19 +7,27 @@
     </head>
 
     <body>
-        <h2>The Nothing Brand </h2>
-        <p>
-            Nothing is an electronics brand founded by Carl Pei in 2020 i think. He asked for the help
-            of investors to build his company. Today they're doing good and released some good tech 
+        <h2 title="Nothing">The Nothing Brand </h2>
+        <p style="color: black;">
+            Nothing is an electronics brand founded by Carl Pei in 2020 i think. He asked for the help<br>
+            of investors to build his company. Today they're doing good and released some good tech
             products including the Phone (2) and Ear(2)
         </p>
-        
+        <hr> There is the Nothing phone (2)
+
+        <pre>
+            Now using PRE tag to see what it does.
+            It should keep text as i have written it in this box
+
+            Keeping spaces and lines between everything      ??
+        </pre>
+
         <p>
-            <a href="https://nothing.tech"> Here is the link to the Nothing website, which i quite like. </a>
+            Here is a link to the <a href="https://nothing.tech">Nothing </a>website, which i quite like.
         </p>
 
         <br> i forgot what br tag does </br>
-        <img src="nothing.png" alt="nothing.tech" width="1292" height="1030">
+        <img src="nothing.png" alt="guy using nothing tech" width="1292" height="1030">
     
     </body>
 
